test/integration/bad/tuples/onepl_expr.stan
model {
  print((3.5,));
}
